--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .idea # IDE related stuff
-hello_window/build/* # Build related stuff
+hello_window/build/*
+hello_window/.idea/*
 hello_triangle/build/* 
+hello_triangle/.idea/*
