--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,9 +19,9 @@ find_package(OpenGL REQUIRED)
 link_libraries(glfw OpenGL::GL glad)
 include_directories(${GLFW_DIR}/include ${GLAD_DIR}/include)
 
-add_executable(window window.cpp)
-add_executable(triangle triangle.cpp)
-add_executable(ex1 ex1.cpp)
-add_executable(ex2 ex2.cpp)
-add_executable(ex3 ex3.cpp)
-add_executable(shader shader.cpp)
+add_executable(hello_window hello_window/hello_window.cpp)
+add_executable(hello_triangle hello_triangle/hello_triangle.cpp)
+add_executable(triangle_ex1 hello_triangle/ex1.cpp)
+add_executable(triangle_ex2 hello_triangle/ex2.cpp)
+add_executable(triangle_ex3 hello_triangle/ex3.cpp)
+add_executable(shader shaders/shaders.cpp)
